typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName35.ts.stderr
error: TS1171
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName35.ts:3:6
  |
3 |     [0, 1]: { }
  |      ^^^^

error: UselessSeqExpr {
    span: Span {
        lo: BytePos(
            32,
        ),
        hi: BytePos(
            33,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName35.ts:3:6
  |
3 |     [0, 1]: { }
  |      ^

